#WVG-123 #Resolve #time 45m #comments style sheet changes for related videos left alignment in video short code page.,

--- a/css/skins.css
+++ b/css/skins.css
@@ -13,10 +13,11 @@ License: GPL2
 .jcarousel-skin-tango .jcarousel-clip-horizontal {    height: auto;    margin-top: 15px; border-radius: 2px;-webkit-border-radius: 2px;
 -moz-border-radius: 2px;
 padding: 5px;
-text-align: center;
+
 -moz-box-shadow: 0px 0px 3px #999;
 -webkit-box-shadow: 0px 0px 3px #999;
 box-shadow: 0px 0px 3px #999;}
+.jcarousel-skin-tango .vid_info{float: left;clear: both;}
 .jcarousel-skin-tango .jcarousel-clip-vertical {    width:  80px;    height: auto;    margin-top:15px;}
 .jcarousel-skin-tango .jcarousel-item {width: 130px;
 height: auto;
